<resources>
    <string name="app_name">MedWasteManage</string>
    <string name="profile">Profile</string>
    <string name="checklist_waste">Checklist Waste</string>
    <string name="request_waste_pickup">Request Waste Pickup</string>
    <string name="safety_procedures">Safety Procedures</string>
    <string name="sign_out">Sign Out</string>
    <string name="references">References</string>
    <string name="medical_waste_management">Medical Waste Management</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about">About</string>
    <string name="manage_waste">Manage Waste</string>
    <string name="_1_point">Avoid physical contact with medical wastes, whether they are in red bags or sharps containers or not. If you are required to move these items—for example, to separate them for pickup—use a shovel or other implementation.</string>
    <string name="_2_point">Never handle any wastes with your bare hands.</string>
    <string name="_3_point">Report any exposure to blood or other bodily fluids promptly and get medical attention.</string>
    <string name="_4_point">Where possible, use Gloves. Make sure that you are wearing gloves that minimize the chance of being cut.</string>
    <string name="_5_point">Large pieces of broken glass should be removed with brooms and disposed of in a separate container. Small pieces can be removed with tongs. Glass should never be removed with fingers.</string>
    <string name="_6_point">Avoid handling personal items, like pens and combs, while wearing gloves.</string>
    <string name="_7_point">Always wash your hands after removing your gloves, even if the gloves have not been cut or punctured.</string>
    <string name="_8_point">Always wash hands before eating, drinking, smoking, or putting anything in your mouth, and before leaving work.</string>
    <string name="_9_point">Remove clothing, boots, and gloves that have been in contact with infectious waste as soon as possible, taking care to avoid contact with exposed skin surfaces.</string>
    <string name="_10_point">Use gloves to remove other items of clothing.</string>
    <string name="_11_point">Place contaminated PPE in closable, leakproof bags or containers for disposal or decontamination.</string>
    <string name="_12_point">If you come in contact with infectious waste (for example, if you are splashed with blood or blood-containing bodily fluids), wash your hands and any exposed skin thoroughly in warm water and soap, or in waterless antiseptic cleaner, if soap and water are unavailable.</string>
    <string name="infectious_waste">Infectious Waste</string>
    <string name="pathological_waste">Pathological Waste</string>
    <string name="sharps_waste">Sharps Waste</string>
    <string name="chemical_waste">Chemical Waste</string>
    <string name="pharmaceutical_waste">Pharmaceutical Waste</string>
    <string name="cytotoxic_waste">Cytotoxic Waste</string>
    <string name="check_all_the_type_of_wastes_you_are_disposing">Check all the type of Wastes you are disposing :</string>
    <string name="scroll_down_to_see_the_waste_categorization">Scroll Down to see the Waste Categorization</string>
    <string name="waste_categorization">Waste Categorization</string>
    <string name="waste_categorization_points">• Infectious waste: waste contaminated with blood and other bodily fluids (e.g. from discarded diagnostic samples), cultures and stocks of infectious agents from laboratory work (e.g. waste from autopsies and infected animals from laboratories), or waste from patients with infections (e.g. swabs, bandages and disposable medical devices); • Pathological waste: human tissues, organs or fluids, body parts and contaminated animal carcasses; • Sharps waste: syringes, needles, disposable scalpels and blades, etc.; • Chemical waste: for example, solvents and reagents used for laboratory preparations, disinfectants, sterilant and heavy metals contained in medical devices (e.g. mercury in broken thermometers) and batteries; • Pharmaceutical waste: expired, unused and contaminated drugs and vaccines; • Cytotoxic waste: waste containing substances with genotoxic properties (i.e. highly hazardous substances that are, mutagenic, teratogenic or carcinogenic), such as cytotoxic drugs used in cancer treatment and their metabolites; • Radioactive waste: such as products contaminated by radionuclides including radioactive diagnostic material or radiotherapeutic materials; and • Non-hazardous or general waste: waste that does not pose any particular biological, chemical, radioactive or physical hazard.</string>
    <string name="image_not_available_image_contains_organs_and_body_parts">Image not available :: Image contains Organs and Body Parts</string>
    <string name="patho_desc">human tissues, organs or fluids, body parts and contaminated animal carcasses</string>
    <string name="infect_desc">Waste contaminated with blood and other bodily fluids (e.g. from discarded diagnostic samples), cultures and stocks of infectious agents from laboratory work (e.g. waste from autopsies and infected animals from laboratories), or waste from patients with infections (e.g. swabs, bandages and disposable medical devices);</string>
    <string name="sharps_desc">Syringes, needles, disposable scalpels and blades, etc.;</string>
    <string name="chem_desc">for example, solvents and reagents used for laboratory preparations, disinfectants, sterilant and heavy metals contained in medical devices (e.g. mercury in broken thermometers) and batteries;</string>
    <string name="pharma_desc">expired, unused and contaminated drugs and vaccines</string>
    <string name="cyto_desc">waste containing substances with genotoxic properties (i.e. highly hazardous substances that are, mutagenic, teratogenic or carcinogenic), such as cytotoxic drugs used in cancer treatment and their metabolites</string>
    <string name="proceed">Proceed</string>
    <string name="enter_address">Enter Address</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="zip_code">ZIP Code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="landmark">Landmark</string>
    <string name="request_pickup">Request Pickup</string>
    <string name="please_fill_the_form_in_as_much_detail_as_possible">Please fill the form in as much detail as possible</string>
    <string name="everytime_you_dispose_a_waste_you_save_humanity">Every time You Dispose a Waste Properly, You Save Humanity</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="remember_me">Remember Me</string>
    <string name="who_https_www_who_int_news_room_fact_sheets_detail_health_care_waste">WHO :: https://www.who.int/news-room/fact-sheets/detail/health-care-waste</string>
</resources>
