<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".pickup_details">

    <ScrollView
        android:id="@+id/Form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/toolbar_background"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:navigationIcon="@drawable/ic_my_location"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="Enter Pickup Location"
                app:titleTextAppearance="?android:textAppearanceLarge">

            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/comfortaa_bold"
                android:text="@string/please_fill_the_form_in_as_much_detail_as_possible"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="8dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/address"
                android:inputType="text"
                android:padding="8dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/landmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/landmark"
                android:inputType="text"
                android:padding="8dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/zip_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/zip_code"
                android:inputType="number"
                android:padding="8dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/city"
                android:inputType="text"
                android:padding="8dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/state"
                android:inputType="text"
                android:padding="8dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/request_pickup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Form"
        android:layout_margin="8dp"
        android:background="@drawable/button_background_in_app"
        android:fontFamily="@font/comfortaa_bold"
        android:onClick="requestPickup"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/request_pickup"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</RelativeLayout>